--- a/aula001/aula1.html
+++ b/aula001/aula1.html
@@ -33,13 +33,14 @@ p{
 
 <body>
 
-    <h1> Olá,mundo! </h1>
+    <h1> Olá,mund  o! </h1>
     <p>Já me livei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem');
-        window.confirm("Está gostando de javascript");
-        window.prompt("Qual o seu nome?");
         
+        window.alert('Minha primeira mensagem'); // Emite alertas ao carregar a pagina
+        window.confirm("Está gostando de javascript"); // Emite uma mensagem que o cliente deve confirmar ou negar
+        window.prompt("Qual o seu nome?"); // Emite uma pergunra e uma caixa de respostas
+       
 
     </script>
 
