--- a/aula001/aula1.html
+++ b/aula001/aula1.html
@@ -37,12 +37,18 @@ p{
     <p>Já me livei da maldição</p>
     <script>
         
-        window.alert('Minha primeira mensagem'); // Emite alertas ao carregar a pagina
-        window.confirm("Está gostando de javascript"); // Emite uma mensagem que o cliente deve confirmar ou negar
-        window.prompt("Qual o seu nome?"); // Emite uma pergunra e uma caixa de respostas
-       
+      /*  window.alert('Minha primeira mensagem'); // Emite alertas ao carregar a pagina
+        window.confirm("Está gostando de javascript"); // Emite uma mensagem que o cliente deve confirmar ou negar */ 
+/*var nome = window.prompt("Qual o seu nome?") // Variavel + prompt que deixa uma caixa de perguntaas
+ window.alert("É um prazer em te conhecer "+nome) */
 
-    </script>
+ var n1 = Number(window.prompt("Digite um numero")) // qualquer valor vira string 
+ var n2 = Number(window.prompt("Digite outro numero")) // parseInt converta o valor para um numero
+ var soma = n1 + n2
+ alert(`A soma dos numeros é ${soma}`)
+
+
+</script>
 
 
 
