--- a/aula001/aula1.html
+++ b/aula001/aula1.html
@@ -41,12 +41,12 @@ p{
         window.confirm("Está gostando de javascript"); // Emite uma mensagem que o cliente deve confirmar ou negar */ 
 /*var nome = window.prompt("Qual o seu nome?") // Variavel + prompt que deixa uma caixa de perguntaas
  window.alert("É um prazer em te conhecer "+nome) */
+var n1 = Number(window.prompt("Digite um numero"))
+var n2= Number.parseInt(window.prompt("Digite outro numero"))
 
- var n1 = Number(window.prompt("Digite um numero")) // qualquer valor vira string 
- var n2 = Number(window.prompt("Digite outro numero")) // parseInt converta o valor para um numero
- var soma = n1 + n2
- alert(`A soma dos numeros é ${soma}`)
+var soma = n1*n2
 
+document.write(`O resultado dos números é ${soma}`)
 
 </script>
 
