--- a/aula001/aula2.html
+++ b/aula001/aula2.html
@@ -20,13 +20,12 @@
     
 <script>
 
+var n = window.prompt("Digite o seu nome")
+document.write(`Seu nome em letra maiuscula fica: ${n.toUpperCase()}<br>`)
+document.write(`Em letra minuscula fica: ${n.toLowerCase()} <br>`)
+document.write(`Possui o total de caracteres ${n.length} <br>`)
 
-var nome = window.prompt("Qual é o seu nome?")
-document.write(`Olá ${nome}, Seu nome tem ${nome.length} letras  <br>` ) // escreve no docuumento alguma mensagem a baixo 
-document.write(`Seu nome em maiusculo fica ${nome.toUpperCase()} <br>`)
-document.write(`Seu nome em minusculo é ${nome.toLowerCase()}`)
 </script>
 
-
 </body>
-</html>
+</html>Te
