--- a/aula001/aula3.html
+++ b/aula001/aula3.html
@@ -18,21 +18,20 @@
 <h1>Iniciando os estudos com Dom</h1>
 <p>Aqui vai o Resultado</p>
 <p>Aprendendo a usar o <strong> Dom </strong></p>
+<p>Cavalo de Troia</p>
 <div id="msg">Clique em mim</div>
 <script>
-var corpo = window.document.body
-var p1 = window.document.getElementsByTagName("p")[1]
-document.write(p1.innerHTML)
-p1.style.color = "blue"
-/*
-var d = window.document.getElementById("msg")
-d.style.background = 'green'
-d.innerText = "Nova mensagem..."
-*/ 
 
-var d = window.document.querySelector('div#msg')
-d.style = 'black';
-d.innerText = 'Olá!'
+var p = window.document.getElementsByTagName('p')[1]
+p.style.color = "yellow"
+p.innerHTML="Sou foda Carai"
+
+var d = window.document.querySelector("div#msg")
+d.style.background = "blue"
+d.innerText = "Troca isso"
+
+
+
 </script>
 </body>
 </html>
