re-praticando DOM

--- a/aula001/aula3.html
+++ b/aula001/aula3.html
@@ -22,14 +22,12 @@
 <div id="msg">Clique em mim</div>
 <script>
 
-var p = window.document.getElementsByTagName('p')[1]
-p.style.color = "yellow"
-p.innerHTML="Sou foda Carai"
+var p = window.document.getElementsByTagName("p")[1]
+p.style.color = "green"
 
-var d = window.document.querySelector("div#msg")
-d.style.background = "blue"
-d.innerText = "Troca isso"
-
+var div = window.document.getElementById("msg")
+div.style.background = "blue"
+div.innerText = "Troquei galera"
 
 
 </script>
