--- a/aula001/xlrr1.html
+++ b/aula001/xlrr1.html
@@ -30,15 +30,21 @@ input{
     <div id="res">Resultado:</div>
     <script>
 
-        function somar(){
-            var tn1 = window.document.getElementById("textn1")
-            var tn2 = window.document.getElementById("textn2")        
-            var res = window.document.getElementById("res")
-            var n1 = Number(tn1.value)
-            var n2 = Number(tn2.value)
-            var s = n1+n2
-            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a  <b>${s}</b>`
-        }   
+function somar(){
+
+var tn1 = window.document.getElementById("textn1")
+var tn2 = window.document.getElementById("textn2")
+var div = window.document.querySelector("div#res")
+var n1 = Number(tn1.value)
+var n2 = Number(tn2.value)
+var s = n1 + n2
+res.innerHTML = `O resultado da soma dos numeros ${n1} + ${n2} é igual a ${s}` 
+
+
+
+}
+
+
     </script>
 
 </body>
